--- a/css/login.css
+++ b/css/login.css
@@ -13,7 +13,11 @@
   color: var(--color-black);
   border-radius: 4px;
   opacity: 0;
-  transition: opacity 2s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+
+.login-modal.visible {
+  opacity: 1;
 }
 
 .login-button {
