✨ feat: 로그인 호버 기능 구현
버튼 가운데 정렬 및 텍스트 크기는 추후 스타일 지정

--- a/css/color.css
+++ b/css/color.css
@@ -5,6 +5,7 @@
   --color-PrimaryYellow300:#FEBE30;
   --color-PrimaryYellow400:#DE9408;
   --color-black: #10141a;
+  --color-gray500:#5f5f5f;
   --color-gray900: #1b232f;
   --color-gray400: #d5d5d5;
   --color-SecondaryNavy: #074099;
