--- a/css/login.css
+++ b/css/login.css
@@ -89,3 +89,50 @@
   display: flex;
   margin: 0 10px;
 }
+
+.button1 {
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 10px;
+  width: auto;
+  height: 32px;
+  background: linear-gradient(174.6deg, var(--color-white) 4.31%, var(--color-PrimaryYellow200) 50.01%, var(--color-PrimaryYellow300) 95.71%);
+  border: 1px solid var(--color-PrimaryYellow400);
+  border-radius: 4px;
+  margin-bottom: 15px;
+}
+.shipping {
+  position: relative;
+}
+
+.shipping-hover {
+  display: none;
+}
+
+.shipping-box {
+  position: absolute;
+  top: 40px;
+  width: 320px;
+  height: 126px;
+  background-color: var(--color-white);
+  color: var(--color-black);
+  border-radius: 4px;
+  padding: 20px;
+  box-shadow: 0px 3px 6px var(--color-gray500);
+}
+
+.shipping-pointer {
+  position: absolute;
+  width: 18.93px;
+  height: 18.93px;
+  top: 30px;
+  right: -2px;
+  background-color: var(--color-white);
+  z-index: 2;
+  transform: rotate(45deg);
+}
+
+.shipping-country:hover + .shipping-hover {
+  display: block;
+}
