♻️ refactor: 사이드바 항목 a 태그 삭제
사이드바에서 각 항목에 대한 링크를 줄 필요가 없다고 판단하여 a 태그 삭제

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -2,6 +2,8 @@
   width: 320px;
   height: 1897px;
   background-color: rgb(254, 245, 245);
+  position: fixed;
+  top: 0;
 }
 
 .sidebar-header {
@@ -28,9 +30,4 @@
   display: flex;
   padding: 20px;
   justify-content: space-between;
-}
-
-.sidebar a {
-  text-decoration: none;
-  color: var(--color-black);
 }
