✨ feat: 사이드바 메뉴영역 클릭 이벤트 구현
사이드바 '모두보기' 클릭시 하위 영역 펼쳐지는 기능 구현

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -31,3 +31,9 @@
   padding: 20px;
   justify-content: space-between;
 }
+
+.sidebar-other-contents {
+  height: 0;
+  transition: height 4s ease-in-out;
+  overflow: hidden;
+}
