✨ feat: 사이드바 'x' 버튼 추가

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -40,3 +40,12 @@
   overflow: hidden;
   transition: 1s ease-in-out;
 }
+
+.sidebar-close-button {
+  font-size: 30px;
+  position: fixed;
+  left: 320px;
+  top: 5px;
+  border: 0;
+  background-color: transparent;
+}
