--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,3 +1,8 @@
+header {
+  position: relative;
+  z-index: 1;
+}
+
 .nav-belt {
   display: flex;
   align-items: center;
@@ -78,4 +83,16 @@
   display: flex;
   flex: 1;
   flex-direction: row-reverse;
+}
+
+.dimmed {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: var(--color-gray600);
+  display: none;
 }
