--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import "./reset.css";
 @import "./navigation.css";
 @import "./color.css";
-@import "./login.css";
+@import "./modal.css";
 @import "./sidebar.css";
+
+/* @import "./typography.css" */
