--- a/css/modal.css
+++ b/css/modal.css
@@ -1,29 +1,15 @@
-/* 배송처 */
-.nav__shipping {
-  position: relative;
-}
-
-.shipping__box {
+/* 모달 템플릿 속성 지정 */
+.nav__modal {
   position: absolute;
-  top: 2.688rem;
-  left: -1.25rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
-  width: 20rem;
-  height: 7.875rem;
   padding: 1rem;
-  border-radius: 0.25rem;
-  font-size: 0.688rem;
-  background-color: var(--color-white);
   box-shadow: 0rem 0.188rem 0.375rem var(--color-gray500);
+  border-radius: 0.25rem;
+  background-color: var(--color-white);
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
-.shipping__modal-pointer {
-  position: absolute;
-  top: 2.125rem;
-  left: 0.875rem;
+.modal__pointer {
   border-bottom: 1rem solid var(--color-white);
   border-left: 0.563rem solid transparent;
   border-right: 0.563rem solid transparent;
@@ -37,12 +23,33 @@
   background-image: linear-gradient(174.6deg, var(--color-white) 4.31%, var(--color-primaryYellow100) 50.01%, var(--color-primaryYellow200) 95.71%);
 }
 
-/* 배송처 호버 */
-.shipping__modal-hover {
-  display: none;
+/* 배송처 */
+.nav__shipping {
+  position: relative;
 }
 
-.nav__shipping-address:hover + .shipping__modal-hover {
+.shipping__modal {
+  top: 2.688rem;
+  left: -1.25rem;
+  display: none;
+  width: 20rem;
+  height: 7rem;
+}
+
+.shipping__box {
+  display: flex;
+  flex-direction:column;
+  align-items: flex-end;
+  gap: 3.125rem;
+}
+
+.shipping__pointer {
+  position: absolute;
+  top: -0.688rem;
+  left: 2.125rem;
+}
+
+.nav__shipping-address:hover + .shipping__modal {
   display: block;
 }
 
@@ -51,67 +58,32 @@
   position: relative;
 }
 
-.login__modal-fadeIn {
-  position: absolute;
+.login__modal {
   top: 2.688rem;
   right: 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   width: 16rem;
-  height: 5.625rem;
-  padding: 1rem;
-  border-radius: 0.25rem;
-  background-color: var(--color-white);
-  box-shadow: 0rem 0.188rem 0.375rem var(--color-gray500);
-  font-size: 0.688rem;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
+  height: 4rem;
+  gap: 1.125rem;
+  /* opacity: 0;
+  transition: opacity 1s ease-in-out; */
 }
 
-.login__modal-fadeIn.visible {
-  opacity: 1;
-}
-
-.modal__login-button {
+.login__button {
   width: 10rem;
   height: 2rem;
-  padding: 0rem 0.625rem;
-  border: 0.063rem solid var(--color-primaryYellow300);
-  border-radius: 0.25rem;
-  background-image: linear-gradient(174.6deg, var(--color-white) 4.31%, var(--color-primaryYellow100) 50.01%, var(--color-primaryYellow200) 95.71%);
 }
 
-.login__modal-pointer {
+.login__pointer{
   position: absolute;
   top: -0.75rem;
-  right: 1.625rem;
-  border-bottom: 1rem solid var(--color-white);
-  border-left: 0.563rem solid transparent;
-  border-right: 0.563rem solid transparent;
+  right: 2.063rem;
 }
 
-.login__modal-hover {
-  position: absolute;
-  top: 2.688rem;
-  right: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  width: 16rem;
-  height: 5.625rem;
-  padding: 1rem;
-  border-radius: 0.25rem;
-  background-color: var(--color-white);
-  box-shadow: 0rem 0.188rem 0.375rem var(--color-gray500);
-  font-size: 0.688rem;
-}
-
-/* 로그인 호버 */
-/* .login__modal-hover {
-  display: none;
+/* .login__modal.visible {
+  opacity: 1;
 }
 
 .nav__login:hover + .login__modal-fadeIn {
