💄 style: css 폴더 구조 변경
- 전역에서 사용되는 스타일은 common, 재사용 가능한 컴포넌트 스타일은 컴포넌트 폴더에 넣음
- reset.css 출처 표시

--- a/css/common/variables.css
+++ b/css/common/variables.css
@@ -1,5 +1,8 @@
 :root {
+  /* font */
   font-size: 16px;
+
+  /* color */
   --color-white: #ffffff;
   --color-gray100: #eff2f2;
   --color-gray200: #e5e9e9;
