--- a/css/common/reset.css
+++ b/css/common/reset.css
@@ -1,3 +1,5 @@
+/* 출처: https://cssdeck.com/blog/scripts/eric-meyer-reset-css/ */
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
