--- a/css/layout/modal.css
+++ b/css/layout/modal.css
@@ -38,7 +38,7 @@
 
 .shipping__box {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   align-items: flex-end;
   gap: 3.125rem;
 }
@@ -65,10 +65,8 @@
   flex-direction: column;
   align-items: center;
   width: 16rem;
-  height: 4rem;
+  height: auto;
   gap: 1.125rem;
-  /* opacity: 0;
-  transition: opacity 1s ease-in-out; */
 }
 
 .login__button {
@@ -76,20 +74,51 @@
   height: 2rem;
 }
 
-.login__pointer{
+.login__pointer {
   position: absolute;
   top: -0.75rem;
   right: 2.063rem;
 }
 
-/* .login__modal.visible {
+.login__modal-link a {
+  text-decoration: none;
+  color: var(--color-secondaryNavy);
+}
+
+/* 로그인 모달 1초뒤 등장 */
+.hide {
+  opacity: 0;
+}
+
+.login__modal-show {
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+}
+
+/* 로그인 호버 */
+.login__hover {
+  opacity: 0;
+}
+
+.nav__login:hover ~ .login__hover {
   opacity: 1;
 }
 
-.nav__login:hover + .login__modal-fadeIn {
-  display: none;
+/* 로그인 호버 목록 */
+.login__modal-accountList {
+  display: flex;
+  gap: 1rem;
+  font-size: 0.688rem;
+  line-height: 1.3rem;
 }
 
-.nav__login:hover + .login__modal-hover {
-  display: block;
-} */
+.list__items :first-child,
+.account__items :first-child {
+  font-size: 0.813rem;
+  font-weight: 800;
+}
+
+.line {
+  width: 100%;
+  background: var(--color-gray100);
+}
