--- a/css/layout/modal.css
+++ b/css/layout/modal.css
@@ -5,8 +5,8 @@
   box-shadow: 0rem 0.188rem 0.375rem var(--color-gray500);
   border-radius: 0.25rem;
   background-color: var(--color-white);
-  font-size: 0.75rem;
-  line-height: 1rem;
+  font-size: var(--font-boldXS);
+  line-height: var(--line-height-large);
 }
 
 .modal__pointer {
@@ -105,14 +105,14 @@
 .login__modal-accountList {
   display: flex;
   gap: 1rem;
-  font-size: 0.688rem;
-  line-height: 1.3rem;
+  font-size: var(--font-boldSM);
+  line-height: var(--line-height-large);
 }
 
 .list__items :first-child,
 .account__items :first-child {
-  font-size: 0.813rem;
-  font-weight: 800;
+  font-size: var(--font-boldM);
+  font-weight: var(--weight-extraBold);
 }
 
 .line {
