♻️ refactor: 딤처리 효과 개선
- display:none->opacity:0으로 수정
- z-index 변수 지정
- 사이드바, 모달창에 대한 딤처리 완료
- 사이드바 애니메이션 효과 시간 수정

--- a/css/common/variables.css
+++ b/css/common/variables.css
@@ -15,7 +15,7 @@
 
   /* line height */
   --line-height-large: 160%;
-  
+
   /* color */
   --color-white: #ffffff;
   --color-gray100: #eff2f2;
@@ -38,5 +38,8 @@
   --color-secondaryNavy: #074099;
   --color-secondaryGreen: #0c5e72;
 
-
+  /* z-index */
+  --zIndex-header: 1000;
+  --zIndex-sidebar: 3000;
+  --zIndex-dimmed: 2000;
 }
