--- a/css/layout/dimmed.css
+++ b/css/layout/dimmed.css
@@ -1,19 +1,23 @@
 header {
   position: relative;
-  z-index: 100;
+  z-index: var(--zIndex-header);
 }
 
-.dimmed {
+.dimmed-layer {
   position: absolute;
-  z-index: 10;
   top: 0;
   left: 0;
-  display: none;
+  opacity: 0;
   width: 100%;
   height: 100%;
   background-color: var(--color-black40);
 }
 
-.dimmedShow {
-  display: block;
+.dimmed-layer__show {
+  opacity: 1;
+}
+
+/* sidebar dimmed : dimmed layer z-index값 주기 */
+.dimmed-layer__zindex {
+  z-index: var(--zIndex-dimmed);
 }
